--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ DB_DATABASE=cinema
 DB_USERNAME=root
 DB_PASSWORD=
 
-DATA_SOURCE = json  
+DATA_SOURCE = database  
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
