--- a/.env
+++ b/.env
@@ -14,8 +14,10 @@ DB_PORT=3306
 DB_DATABASE=cinema
 DB_USERNAME=root
 DB_PASSWORD=
+DATABASE_URL=..\database\database.sqlite
 
-DATA_SOURCE = database  
+
+DATA_SOURCE = sqlite  
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
